fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ font-family: 'Handlee', cursive;
     border-top: 2px solid rgba(100, 125, 100, 0.2);
     border-radius: 15px;
     background-color: rgb(245, 244, 244, 0.7);
-    /* overflow: hidden; */
+    overflow: hidden;
     position: relative;
 }
 
